# ernie-cli

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
docs/: tieba-demo.html
erniecli/: __init__.py  __main__.py  config.py  repl.py
erniecli/agent/: boss.py  loop.py  permissions.py  tools.py  worker.py
erniecli/api/: client.py
erniecli/tieba/: __init__.py  loop.py  personas.py  renderer.py  scheduler.py
erniecli/tui/: __init__.py  logo.py  renderer.py
