[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "erniecli"
version = "1.0.0"
description = "ErnieCLI — A Claude Code-style agent CLI powered by Ernie 5.1"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.30.0",
    "rich>=13.7.0",
    "prompt_toolkit>=3.0.43",
    "PyYAML>=6.0",
]

[project.scripts]
ernie = "erniecli.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["erniecli*"]
